--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    buildToolsVersion "20"
 
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 19
-        versionCode 20140827
-        versionName "1.0.7"
+        versionCode 1
+        versionName "1.0.0"
     }
 
     buildTypes {
